# open-data-product-berlin-lor-monitoring-social-urban-development-source-aligned

./: README.md  data-product-manifest.yml  data-product.yml  data-transformation-02-silver.yml  data-transformation-03-gold.yml  dpds.yml  main.ipynb  main.py  odps.yml  pyproject.toml
data/02-silver/berlin-lor-monitoring-social-urban-development-2013-00/: berlin-lor-monitoring-social-urban-development-2013-00-1.csv  berlin-lor-monitoring-social-urban-development-2013-00-2-1.csv  berlin-lor-monitoring-social-urban-development-2013-00-2-2.csv  berlin-lor-monitoring-social-urban-development-2013-00-2-3.csv  berlin-lor-monitoring-social-urban-development-2013-00-3.csv  berlin-lor-monitoring-social-urban-development-2013-00-4-1.csv  berlin-lor-monitoring-social-urban-development-2013-00-4-2.csv  berlin-lor-monitoring-social-urban-development-2013-00-4-3.csv
data/02-silver/berlin-lor-monitoring-social-urban-development-2015-00/: berlin-lor-monitoring-social-urban-development-2015-00-1.csv  berlin-lor-monitoring-social-urban-development-2015-00-2-1.csv  berlin-lor-monitoring-social-urban-development-2015-00-2-2.csv  berlin-lor-monitoring-social-urban-development-2015-00-2-3.csv  berlin-lor-monitoring-social-urban-development-2015-00-3.csv  berlin-lor-monitoring-social-urban-development-2015-00-4-1.csv  berlin-lor-monitoring-social-urban-development-2015-00-4-2.csv  (+1 more)
docs/: data-product-canvas.md  dpds-canvas.md  odps-canvas.md
lib/config/: data_transformation_gold_loader.py
lib/load/: data_loader.py
lib/transform/: data_copier.py  data_csv_converter.py
(+112 files in other folders)
