[project]
name = "open-data-product-berlin-lor-monitoring-social-urban-development-source-aligned"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "dacite>=1.9.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]
