[project]
name = "open-data-product-berlin-monitoring-social-urban-development-source-aligned"
version = "0.1.0"
description = "Source-aligned data product providing Berlin monitoring social urban development data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "dacite>=1.9.2",
    "open-data-product-python-lib",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[tool.uv.sources]
open-data-product-python-lib = { git = "https://github.com/open-data-product/open-data-product-python-lib.git" }
